Kubernetes/monitoring/In-Cluster/prometheus/prometheus-ing.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: monitoring-prometheus
 namespace: monitoring
 annotations:
spec:
 rules:
   - host: prometheus.gcsc.lmy.corp
     http:
       paths:
         - path: /
           backend:
             serviceName: prometheus
             servicePort: 9090
   - host: alertmanager.gcsc.lmy.corp
     http:
       paths:
         - path: /
           backend:
             serviceName: alertmanager
             servicePort: 9093
